WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290113
Assert that canonicalizePathname, canonicalizeSearch, and canonicalizeHash cannot fail
https://bugs.webkit.org/show_bug.cgi?id=290113
Summary
Assert that canonicalizePathname, canonicalizeSearch, and canonicalizeHash ca...
Anne van Kesteren
Reported
2025-03-20 11:22:23 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Anne van Kesteren
Comment 1
2025-03-20 11:24:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42755
EWS
Comment 2
2025-03-24 01:24:32 PDT
Committed
292579@main
(7341f7ddb8ee): <
https://commits.webkit.org/292579@main
> Reviewed commits have been landed. Closing PR #42755 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-03-24 01:25:15 PDT
<
rdar://problem/147730839
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug