Assert that canonicalizePathname, canonicalizeSearch, and canonicalizeHash cannot fail https://bugs.webkit.org/show_bug.cgi?id=290113

Reviewed by Youenn Fablet.

Although the specification seems to assume these operations can fail,
they cannot.

* Source/WebCore/Modules/url-pattern/URLPatternCanonical.cpp:
(WebCore::canonicalizePathname):
(WebCore::canonicalizeSearch):
(WebCore::canonicalizeHash):

Canonical link: https://commits.webkit.org/292579@main